# LucidRender

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
.github/workflows/: cmake.yml
CMake/: conan.cmake  macros.cmake
Lucid/Core/: InputController.cpp  Scene.cpp  Texture.h
Lucid/Utils/: Defaults.hpp
Lucid/Utils/MacOS/: CMakeLists.txt
Lucid/Vulkan/: CMakeLists.txt  VulkanDescriptorSet.cpp  VulkanEntity.cpp  VulkanEntity.h  VulkanRenderPass.cpp  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp
Resources/Icons/: AppIcon.icns
Resources/Models/: Ground.mtl
Resources/Shaders/: Pixel.hlsl  Shader.frag  Shader.vert  Skybox.frag  Skybox.vert  Vertex.fxc  Vertex.hlsl
Sources/: CMakeLists.txt
Sources/Application/: CMakeLists.txt  Source.cpp  Window.cpp  Window.h
Sources/Core/: CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  InputController.cpp  InputController.h  Interfaces.h  Light.h  Mesh.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Texture.h  Types.cpp  Types.h  UniformBufferObject.h  Vertex.h
Sources/D3D12/: CMakeLists.txt  D3D12Adapter.cpp  D3D12Adapter.h  D3D12CommandAllocator.cpp  D3D12CommandAllocator.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12DescriptorHeap.cpp  D3D12DescriptorHeap.h  D3D12Device.cpp  D3D12Device.h  D3D12Entity.h  D3D12Fence.cpp  D3D12Fence.h  D3D12Render.cpp  D3D12Render.h  D3D12Swapchain.cpp  D3D12Swapchain.h  D3D12Utils.cpp  D3D12Utils.h
Sources/Utils/: CMakeLists.txt  Defaults.hpp  Files.cpp  Files.h  Interfaces.hpp  Logger.cpp  Logger.hpp
Sources/Utils/Loaders/: GltfLoader.cpp  GltfLoader.h  ObjLoader.cpp  ObjLoader.h
Sources/Utils/MacOS/: CMakeLists.txt  Interface.h  Interface.m
Sources/Vulkan/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandManager.cpp  VulkanCommandManager.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEntity.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRender.cpp  VulkanRender.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h  VulkanSkybox.cpp  VulkanSkybox.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanVertex.cpp  VulkanVertex.h
Standalone/: CMakeLists.txt  Source.cpp  Window.cpp  Window.h
